# GlycoSpectrumAnnotator

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
config/: default_config.yaml  modifications.json
docs/: USER_MANUAL.md  usage.md
examples/: annotate_single.py
glycospectrum/: __init__.py  annotator.py  fragment_calculator.py  glycan_library.py
spectrum_annotator_ddzby/: __init__.py  annotator.py  fragment_calculator.py  spectrum_reader.py
tests/: test_fragment_calculator.py  test_glycan_library.py
